[tool.poetry]
name = "python-flowzone-test"
version = "0.1.1"
description = ""
authors = ["Team balena <team@balena.io>"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.13"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
